[gd_scene format=3 uid="uid://33qrbtnnfjbg"]

[ext_resource type="Script" uid="uid://cx8x0vxrvy5q3" path="res://scripts/ui/add_ingredient_button.gd" id="1_mhim0"]
[ext_resource type="Resource" uid="uid://dt8e8153g8nkx" path="res://resources/special_ingredients/stardust_bitters.tres" id="2_mhim0"]
[ext_resource type="Texture2D" uid="uid://c18f5tbtxj21e" path="res://assets/utensils/temporary/bottle.png" id="3_y0on6"]
[ext_resource type="PackedScene" uid="uid://dthjdr2uef2ib" path="res://scenes/flavor_stat_info.tscn" id="4_645dr"]

[sub_resource type="LabelSettings" id="LabelSettings_axpdx"]
font_size = 20

[node name="AddIngredientButton" type="Button" unique_id=788102067]
custom_minimum_size = Vector2(350, 150)
offset_right = 350.0
offset_bottom = 150.0
size_flags_horizontal = 3
script = ExtResource("1_mhim0")
special_ingredient = ExtResource("2_mhim0")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=2006531660]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" unique_id=1010986422]
layout_mode = 2
theme_override_constants/separation = 20

[node name="IngredientIcon" type="TextureRect" parent="MarginContainer/HBoxContainer" unique_id=1133116075]
unique_name_in_owner = true
self_modulate = Color(0.8533072, 0.3540417, 0, 1)
custom_minimum_size = Vector2(60, 120)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("3_y0on6")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer" unique_id=1550905978]
layout_mode = 2
size_flags_horizontal = 3

[node name="IngredientName" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer" unique_id=639201776]
unique_name_in_owner = true
layout_mode = 2
text = "Chrono Gin"
label_settings = SubResource("LabelSettings_axpdx")

[node name="FlavorStatsContainer" type="GridContainer" parent="MarginContainer/HBoxContainer/VBoxContainer" unique_id=704416622]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="FlavorStatIcon" parent="MarginContainer/HBoxContainer/VBoxContainer/FlavorStatsContainer" unique_id=43189886 instance=ExtResource("4_645dr")]
layout_mode = 2

[node name="FlavorStatIcon2" parent="MarginContainer/HBoxContainer/VBoxContainer/FlavorStatsContainer" unique_id=1909818116 instance=ExtResource("4_645dr")]
layout_mode = 2

[node name="FlavorStatIcon3" parent="MarginContainer/HBoxContainer/VBoxContainer/FlavorStatsContainer" unique_id=336148303 instance=ExtResource("4_645dr")]
layout_mode = 2
